--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@
 /.bundle
 
 # Ignore the default SQLite database.
-/db/production.sqlite3
-/db/test.sqlite3
+/db/*.sqlite3
 /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+/public/uploads
